# aires-garden

./: .gitignore  Makefile  README.md  RGB.txt  WORKFLOW.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: deploy.yml
content/extra/: CNAME
content/intro/: all.en.md  all.es.md  all.pt.md  lang.en.md  lang.es.md  lang.pt.md
content/pages/: 404.en.md  404.es.md  404.md  404.pt.md
content/posts/acusacoes-de-senador-geram-cisao-em-partido-do-senado/: acusacoes-de-senador-geram-cisao-em-partido-do-senado.pt.md
content/posts/cry/: cry.en.md
docs/: visual-identity.md
garden/: __main__.py  cli.py  content_index.py  frontmatter_io.py  prompts.py  validation.py
garden/commands/: lifecycle.py  lint.py  new.py  translate.py
garden/tests/: test_frontmatter_io.py  test_lifecycle.py  test_lint.py  test_new.py  test_prompts.py  test_translate.py  test_validation.py
openspec/: project.md  roadmap.md
openspec/decisions/: 0001-project-context-baseline-plus-adrs.md  0002-design-md-always-present-status-marked.md  0003-custom-domain-phased-launch.md  0004-multilingual-post-frontmatter-conventions.md  0005-dns-stays-on-gandi.md  0006-status-enum.md  0007-small-clientside-js.md  0008-dev-drafts-promotion.md  0009-tag-prose-content-type.md  0010-header-lang-picker-as-navigator.md  0011-intro-content-type.md  README.md
plugins/content_tags/: __init__.py  parser.py  registry.py
plugins/dev_drafts/: __init__.py
plugins/frontmatter_lint/: __init__.py  body_scanner.py  cli.py  schema.py
plugins/i18n_grouping/: __init__.py
plugins/intro_pages/: __init__.py
plugins/multilingual_404/: __init__.py
plugins/post_assets/: __init__.py
plugins/tag_pages/: __init__.py
tools/: colour-candidates.html  contrast_audit.py  design-prototype.html  prototype-homepage-catalogue.html
(+151 files in other folders)
